--- a/templates/index.twig
+++ b/templates/index.twig
@@ -2,4 +2,10 @@
 
 {% block body %}
     <div id="app"></div>
+
+    <script type="application/javascript">
+        window.__CONFIG__ = {
+            csrf: "{{ csrf_token('unique_string') }}"
+        };
+    </script>
 {% endblock %}
